add zone_id